--- a/Final Project.Rmd
+++ b/Final Project.Rmd
@@ -54,7 +54,6 @@ The Google Play Store dataset contains records for 10,840 different apps.  The v
 * **Type** - Tells which apps are free and which require payment
 * **Price** - Gives the Price for each app
 * **Content_Rating** - Indicates which age groups the app is approved for
-* **Genres** - A further breakdown of the Category variable for each app
 * **Last Updated** - Date the app was last updated
 * **Current.Ver** - Current Version of the app
 
@@ -62,7 +61,7 @@ The Google Play Store dataset contains records for 10,840 different apps.  The v
 library("stringr")
 # setwd("/Users/jonathangiguere/Desktop/DATS 6101/Projects/Project 1/Data-Science-Project-Final-master")
 googlePlay <- read.csv('googleplaystore.csv')
-googlePlay <- subset(googlePlay, select = -c(Android.Ver) )
+googlePlay <- subset(googlePlay, select = -c(Android.Ver, Genres) )
 googlePlay$Size <- str_remove(googlePlay$Size, 'M')
 str(googlePlay)
 ```
